# future_ws

./: .gitignore  .gitmodules  README.md
future_devices/: CMakeLists.txt  Makefile
future_devices/include/: future_comm.h  future_def.h  future_devices.h
future_devices/src/: future_comm.cpp  future_coom.cpp  future_devices.cpp
future_devices/test/: future_test.cpp
future_gui/: CMakeLists.txt
future_gui/include/: config_gui.h  input_ui.h  menu_ui.h  notice_ui.h
future_gui/src/: input_ui.cpp  menu_ui.cpp  notice_ui.cpp
sw900_linux_sdk/: Make.defines  Make.defines.bak  Makefile  Makefile.bak  device_info_generate  mbtk_version  ota_update  readme.txt
sw900_linux_sdk/include/: mbtk_device_info.h
sw900_linux_sdk/include/lynq/: liblog.h  liblynq-at-common.h  libpoweralarm.h  lynq-adc.h  lynq-gpio.h  lynq-irq.h  lynq-qser-audio.h  lynq-qser-autosuspend.h  lynq-qser-data.h  lynq-qser-fota.h  lynq-qser-usb.h  lynq-qser-voice.h  lynq-qser-wifi.h  lynq_alarm.h  lynq_autosuspend.h  lynq_call.h  lynq_chip_id.h  lynq_data.h  lynq_deflog.h  lynq_gnss.h  lynq_led.h  lynq_network.h  lynq_qser_gnss.h  lynq_qser_network.h  lynq_qser_sim.h  lynq_qser_sms.h  lynq_qser_thermal.h  lynq_sim.h  lynq_sms.h  lynq_systime.h  lynq_uci.h
sw900_linux_sdk/include/mbtk/: ds_ASBuffer.h  ds_ASString.h  mbtk_adc.h  mbtk_alarm.h  mbtk_at.h  mbtk_audio.h  mbtk_audio2.h  mbtk_audio_gain.h  mbtk_audio_ubus.h  mbtk_coap.h  mbtk_coap_api.h  mbtk_device.h  mbtk_device_info.h  mbtk_dhcp.h  mbtk_file.h  mbtk_fota.h  mbtk_ftp.h  mbtk_gnss.h  mbtk_gnss_5311.h  mbtk_gnss_6228.h  mbtk_gpio.h  mbtk_http.h  mbtk_ifc.h  mbtk_info_api.h  mbtk_list.h  mbtk_log.h  mbtk_map.h  mbtk_mqtt.h  mbtk_mtd.h  mbtk_net_control.h  mbtk_ntp.h  mbtk_pdu_sms.h  (+13 more)
sw900_linux_sdk/test/: Makefile
(+158 files in other folders)
